--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
